--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@ h6 {
   overflow-y: auto;
   transition: 0.3s;
 }
-
+/* 
 @media (min-width: 1130px) {
 .imagelogo {
   margin-bottom: 100px;
@@ -382,7 +382,7 @@ h6 {
               margin-top: 500px;
               margin-bottom: 600px;
             }
-            }
+            } */
 
 .navbar-mobile a,
 .navbar-mobile a:focus {
